--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
